--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
   </style>
 </head>
 <body class="cursor-custom">
-  <div class="music-player">
-    <h3>Clair de Lune – Claude Debussy</h3>
-    <audio controls>
-      <source src="https://upload.wikimedia.org/wikipedia/commons/0/05/Claude_Debussy_-_Suite_bergamasque_-_3._Clair_de_lune.ogg" type="audio/ogg">
-      Your browser does not support the audio element.
-    </audio>
-  </div>
+<div class="music-player">
+  <h3>Clair de Lune – Claude Debussy</h3>
+  <audio controls autoplay>
+    <source src="https://www.bensound.com/bensound-music/bensound-slowmotion.mp3" type="audio/mp3">
+    Your browser does not support the audio element.
+  </audio>
+</div>
 
   <div class="overlay">
     <h1>Welcome to Château de Minuit</h1>
