--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body {
       margin: 0;
       font-family: 'Cormorant Garamond', serif;
-      background: url('https://cdn.pixabay.com/photo/2016/10/29/11/51/castle-1784658_1280.jpg') no-repeat center center fixed;
+      background: url('https://raw.githubusercontent.com/Near33/chateau-de-minuit/main/background.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #f6e9f9;
       overflow-x: hidden;
